--- a/frontend/src/resources/style/custom.css
+++ b/frontend/src/resources/style/custom.css
@@ -6,17 +6,21 @@
     background-color: white;
     height: 60px;
 }
+
 .headroom--unfixed {
     position: relative;
     transform: translateY(0);
 }
+
 .headroom--scrolled {
     transition: transform 200ms ease-in-out;
 }
+
 .headroom--unpinned {
     position: fixed;
     transform: translateY(-100%);
 }
+
 .headroom--pinned {
     position: fixed;
     transform: translateY(0%);
@@ -37,16 +41,15 @@
 }
 
 .sub-header {
+    position: relative;
     height: 70px;
     background-color: paleturquoise;
     color: chocolate;
 }
 
-
 .sub-header-link {
     font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
     color: chocolate;
-    vertical-align: middle;
     height: 70px;
     transition: transform .2s;
 }
@@ -62,16 +65,29 @@
     color: white;
 }
 
-/*.header-menu-item:hover:after {*/
-    /*content: url(../style/angle-arrow-down.svg); !* no need for qoutes *!*/
-    /*height: 5px;*/
-    /*display: block;*/
-    /*position: absolute;*/
-    /*top: 1px; !* change this value to one that suits you *!*/
-/*}*/
-.main-data-container {
-    margin: 90px 30px 0px
+.dashboard-side-menu-item{
+    font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
+    color: chocolate;
+    font-size: 18px;
+    font-style: oblique;
+    transition: transform .2s;
 }
+
+.dashboard-side-menu-item:hover {
+    opacity: 1.2;
+    cursor: pointer;
+}
+
+.main-container {
+    position: relative;
+    min-height: 600px;
+    background-color: white;
+}
+
+.main-data-container {
+    margin: 90px 30px 0px;
+}
+
 .one {
     position: relative;
     z-index: 1;
@@ -114,6 +130,7 @@
 }
 
 .login-form {
+    margin: 90px 30px 0px;
     min-height: 450px;
     background: white;
 }
@@ -155,7 +172,7 @@
     margin-right: 200px;
 }
 
-.imageFadeOut{
+.imageFadeOut {
     transition: transform .2s; /* Animation */
 }
 
@@ -164,7 +181,14 @@
     opacity: 0.7;
 }
 
-.cardImage:hover{
+.cardImage:hover {
     cursor: pointer;
     opacity: 0.7;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    height: 40px;
+    margin-top: 40px;
 }
