--- a/frontend/src/resources/style/custom.css
+++ b/frontend/src/resources/style/custom.css
@@ -1,10 +1,20 @@
+.input-search {
+    border: none;
+    width: 400px;
+}
+
+.input-search input {
+    width: 400px;
+    background-color: white;
+    opacity: 0.7;
+}
 
 .headroom {
     top: 0;
     left: 0;
     right: 0;
     z-index: 1;
-    background-color: white;
+    background: white;
     height: 60px;
 }
 
@@ -29,11 +39,10 @@
 
 .header-menu-item {
     font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
-    color: #595959;
+    color: red;
     display: table-cell;
     vertical-align: middle;
     height: 60px;
-    transition: transform .2s;
 }
 
 .header-menu-item:hover {
@@ -51,13 +60,13 @@
 .sub-header {
     position: relative;
     height: 70px;
-    background-color: paleturquoise;
-    color: chocolate;
+    background-color: black;
+    color: red;
 }
 
 .sub-header-link {
     font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
-    color: chocolate;
+    color: white;
     height: 70px;
     display: table-cell;
     vertical-align: middle;
@@ -73,7 +82,7 @@
 
 .sub-header-link:hover {
     position: relative;
-    color: white;
+    color: red;
     cursor: pointer
 }
 
@@ -117,9 +126,19 @@
     overflow: hidden;
 }
 
+.side-home {
+    height: 670px;
+    width: 100%;
+    opacity: 0.1;
+    background-color: white;
+}
+
+.side-home:hover {
+    opacity: 0;
+}
+
 .one {
     position: relative;
-    z-index: 1;
     background-color: white;
     height: 670px;
     background-image: url(https://res.cloudinary.com/dar4inn2i/image/upload/v1552770405/igoo0o4zl00hpddaaouj.jpg);
