--- a/frontend/src/resources/style/custom.css
+++ b/frontend/src/resources/style/custom.css
@@ -4,14 +4,14 @@
 }
 
 .input-search input {
-    width: 200px;
-    background-color: white;
-    opacity: 0.7;
+    width: 400px;
+    border: none;
+    background-color: #eeeeee;
 }
 
 .input-search input:focus {
     width: 400px;
-    background-color: yellow;
+    background-color: white;
 }
 
 .headroom {
@@ -19,8 +19,8 @@
     left: 0;
     right: 0;
     z-index: 1;
-    background: white;
-    height: 60px;
+    background: #202022;
+    height: 50px;
 }
 
 .headroom--unfixed {
@@ -44,19 +44,35 @@
 
 .header-menu-item {
     font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
-    color: red;
+    color: white;
     display: table-cell;
     vertical-align: middle;
-    height: 60px;
+    height: 50px;
 }
 
 .header-menu-item:hover {
     position: relative;
-    color: black;
+    color: #45b4bf;
     cursor: pointer
 }
 
-.header-image-cover{
+.header-popover-menu-item {
+     font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
+     background-color: white;
+     color: #202022;
+ }
+
+.header-popover-menu-item:hover {
+    font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
+    color: #45b4bf;
+    cursor: pointer
+}
+
+.ant-popover-inner-content{
+    background-color: white;
+}
+
+.header-image-cover img{
     height: 210px;
     width: 100%;
     object-fit: cover;
@@ -64,36 +80,32 @@
 
 .sub-header {
     position: relative;
-    height: 70px;
-    background-color: paleturquoise;
-    color: red;
+    height: 50px;
+    background-color: white;
+    color: #202022;
+    border-bottom: lightgray solid 1px;
 }
 
 .sub-header-link {
-    font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
-    color: white;
-    height: 70px;
+    font-family: 'DejaVu Sans', Helvetica, sans-serif;
+    color: #202022;
+    height: 50px;
     display: table-cell;
+    border-bottom: transparent solid 3px;
     vertical-align: middle;
     transition: transform .2s;
 }
 
-.sub-header-divider {
-    color: white;
-    height: 70px;
-    display: table-cell;
-    vertical-align: middle;
-}
-
 .sub-header-link:hover {
     position: relative;
-    color: red;
-    cursor: pointer
+    color: black;
+    cursor: pointer;
+    border-bottom: black solid 3px;
 }
 
 .sub-header-name {
     font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
-    color: white;
+    color: #202022;
 }
 
 .dashboard-side-menu-item{
@@ -117,29 +129,18 @@
 }
 
 .main-container {
-    position: relative;
-    min-height: 600px;
-    background-color: white;
+    min-height: 650px;
+    background-color: #f6f8f9;
 }
 
 .main-data-container {
-    margin: 90px 30px 0px;
+    padding: 40px 0 ;
+    background-color: #f6f8f9;
 }
 
 .dashboard-data-container {
     transition: all 2s ease-in-out;
     overflow: hidden;
-}
-
-.side-home {
-    height: 670px;
-    width: 100%;
-    opacity: 0.1;
-    background-color: white;
-}
-
-.side-home:hover {
-    opacity: 0;
 }
 
 .one {
@@ -227,6 +228,14 @@
 
 .imageFadeOut {
     transition: transform .2s; /* Animation */
+}
+
+.hidden-image {
+    display: none;
+}
+
+.imageFadeOut:hover .hidden-image {
+    display:block;
 }
 
 .imageFadeOut:hover {
